--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,23 @@
-# build output
-dist/
-
-# generated types
-.astro/
-
-# dependencies
-node_modules/
-
-# logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# environment variables
-.env
-.env.production
-
-# macOS-specific files
+node_modules
 .DS_Store
-
-# jetbrains setting folder
-.idea/
+dist
+.astro
+.vercel
+.env
+.env.*
+*.local
+**/.cache
+**/coverage
+**/*.log
+/.vite
+/.parcel-cache
+/.turbo
+/.pnpm-store
+/.next
+/.nuxt
+/.svelte-kit
+**/*.tmp
+**/.envrc
+public/*.map
+public/*.tmp
+public/*.bak
