Add Vercel likes API and fix Spotify preview
- Add Vercel KV-based likes API with local development fallback
- Update LikeButton to use Vercel API instead of AWS
- Fix Spotify iframe to show progress bar and track list
- Increase Cursor AI logo size in footer
- Add Vercel setup documentation
- Remove Firebase dependencies from LikeButton

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^6.0.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.3",
+    "@vercel/kv": "^1.0.1",
     "astro": "^5.5.2",
     "firebase": "^11.4.0",
     "ogl": "^1.0.11",
