--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@types/node": "^22.13.9",
