--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,15 @@
     "github": {
         "silent": true
     },
-    "routes": [
+    "headers": [
         {
-            "src": "/",
-            "headers": {
-                "cache-control": "s-maxage=7200, stale-while-revalidate"
-            }
-        }
-    ],
-    "cron": [
-        {
-            "path": "/api/revalidate",
-            "schedule": "0 */2 * * *"
+            "source": "/",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "public, s-maxage=7200, stale-while-revalidate=86400"
+                }
+            ]
         }
     ]
 }
